prelims another corrections are complete

--- a/copyright.tex
+++ b/copyright.tex
@@ -1,7 +1,12 @@
 \thispagestyle{empty}
 \noindent
 {\rm\sf\bfseries SHIVAPADA RATNAKOSHA}\\[5pt]
-{\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)}, {\rm Prepared by Editorial Committe}, {\rm Published by JSS Granthamale, Mysuru,} {\rm Pages : ????? + 896}
+{\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)} 
+
+\noindent
+{\rm Prepared by Editorial Committe},\\
+{\rm Published by JSS Granthamale, Mysuru,}\\[8pt]
+{\rm Pages : ????? + 896}
 
 \vspace{1cm}
 
@@ -22,10 +27,17 @@
 {\rm Printed at : ?????????????}
 
 \vfill
+\centerline{\Large\bfseries kananxDa matutx saMsakxqqti ilAKeya dhanasahAyadoMdige}\relax
+\vfill
 
 \noindent
 {\bf\large shivapada ratanxkoVsha}\\[5pt]
-(viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha), saMpAdane : saMpAdaka samiti, parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru, puTagaLu : {\rm ????? +} 896
+(viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha) 
+
+\noindent
+saMpAdane : saMpAdaka samiti,\\
+parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru,\\[8pt]
+puTagaLu : {\rm ????? +} 896
 
 \vspace{1cm}
 
