--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -10,11 +10,11 @@ sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijaga
 
 \medskip
 
-I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda \underline{\qquad} ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru, aSeTxV alalx, tiMgaLoLagAgi maMjUrAti AdeVshavanUnx horaDisikoTaTxru. saMsakxqqti matutx\break vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx nAvu mukatxkaMThadiMda shAlxgisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf yoVjaneye Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivaragaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu\break mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
+I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyavaru parxsAthxvane salilxsida kUDale maMjUrAti AdeVshavanUnx\break horaDisikoTaTxru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneye} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
 
 \medskip
 
-parxkaTaNa viBAgada mAji nideRVshakarU shirxV ke.si. shivapapx, hAli nideVRshaka shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru} gurusAvxmi, shirxV Ti.pi. parxBusAvxmi, visheVSataH shirxV nagaleR shivakumArf avarige namamx kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKapuTa vinAyxsakarAda\break shirxV maMjunAtha avara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
+parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si. shivapapx, parxsutxta nideVRshakarAda shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru} gurusAvxmi, shirxV Ti.pi. parxBusAvxmi, visheVSataH shirxV nagaleR shivakumArfravarige namamx kaqtajacnxtegaLu salulxtatxve.\break yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKapuTa vinAyxsakarAda shirxV maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
 \medskip
 
