--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -6,27 +6,26 @@
 
 \bigskip
 
-jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata, paMthagaLive. avugaLa naDuve aneVka BinanxtegaLive. sAmayx veYshiSaTxtegaLU ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. ``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka matapaMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAnada rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka BinanxtegaLu hAgu sAmayx veYshiSaTxtegaLU ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. ``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka matapaMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
 
 \medskip
 
-parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva parxgatipara dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNayx vayxvasethx hAgU naMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNayx vayxvasethx hAgU naMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
 
 \medskip
 
-pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx, anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx DA. esf.\break vidAyxshaMkarf niVDidAdxre.
+pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx, anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx niVDidAdxre.
 
 \medskip
 
-hiriya vidAvxMsarugaLAda porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, DA. esf. vidAyxshaMkarf, shirxV enf. basavArAdhayx, shirxV esf. naMjuMDayayx, shirxV Arf.esf. pUNARnaMda, DA. naMdiVshf haMce avarugaLu saMpAdaka maMDaLiyalilx aviratavAgi sharxmisi I niGaMTanunx rUpisidAdxre. avarelalxra sharxma ililx sAthaRkagoMDide.
+hiriya vidAvxMsarugaLAda porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, DA. esf. vidAyxshaMkarf, shirxV enf. basavArAdhayx, shirxV esf. \hbox{naMjuMDayayx}, shirxV Arf.esf. pUNARnaMda, DA. naMdiVshf haMce\,ravarugaLu saMpAdaka maMDaLiyalilx aviratavAgi sharxmisi I niGaMTanunx rUpisidAdxre. avarelalxra sharxma ililx sAthaRkagoMDide.
 
 \medskip
 
-DA. naMdiVshf haMce I garxMthada saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe,\break padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx pirxVti, sharxdedhxgaLiMda mADidAdxre. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
-
+DA. naMdiVshf haMce I garxMthada saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe,\break padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx pirxVti, sharxdedhxgaLiMda mADidAdxre. 
 \medskip
 
-I yoVjanege sahAyadhana niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx hAreYsutetxVve.
+I yoVjanege sahAyadhana niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx AshisutetxVve. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
 
 \vskip 1cm
 
