correction in progress

--- a/nivedane.tex
+++ b/nivedane.tex
@@ -263,7 +263,7 @@ I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaM
 
 \medskip
 
-I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshaka ke.si. shivapapxnavarige, Igina nideVRshaka morabada malilxkAjuRna, Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka nagaleR shivakumArfravarige kaqtajacnxtegaLu. I yoVjaneyu acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda yoVgAnaMda, ajuRnf kashayxpf, shivashaMkarfravara eDebiDada sahakArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx rAGaveVMdarx parxsAdfravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
+I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshaka ke.si. shivapapxnavarige, Igina nideVRshaka morabada malilxkAjuRna, Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda yoVgAnaMda, ajuRnf kashayxpf, shivashaMkarfravara eDebiDada sahakArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx rAGaveVMdarx parxsAdf matutx parxtiBaravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
 
 \medskip
 
