--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -14,7 +14,7 @@ I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakx
 
 \medskip
 
-parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si. shivapapx, parxsutxta nideVRshakarAda shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru} gurusAvxmi, shirxV Ti.pi. parxBusAvxmi, visheVSataH shirxV nagaleR shivakumArfravarige namamx kaqtajacnxtegaLu salulxtatxve.\break yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKapuTa vinAyxsakarAda shirxV maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
+parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si. shivapapx, parxsutxta nideVRshakarAda shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru} gurusAvxmi, shirxV Ti.pi. parxBusAvxmi, visheVSataH shirxV nagaleR shivakumArfravarige namamx kaqtajacnxtegaLu salulxtatxve.\break yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf, shirxV rAGaveVMdarx parxsAdf matutx shirxVmati parxtiBa, muKapuTa vinAyxsakarAda shirxV maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
 \medskip
 
