work in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -4,16 +4,16 @@
 {\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)} 
 
 \noindent
-{\rm Prepared by Editorial Committe},\\
-{\rm Published by JSS Granthamale, Mysuru,}\\[8pt]
+{\rm Prepared by Editorial Committe}\\
+{\rm Published by JSS Granthamale, Mysuru}\\[8pt]
 {\rm Pages : ????? + 896}
 
 \vspace{1cm}
 
 \noindent
 {\rm \copyright \ Publishers}\\[7pt]
-{\rm First Edition : 2019}\\[7pt]
-{\rm No. of Copies : 1000}\\[7pt]
+{\rm First Edition : 2020}\\[7pt]
+{\rm No. of Copies : 2000}\\[7pt]
 {\rm Price :} \rupee
 
 \bigskip
@@ -27,8 +27,11 @@
 {\rm Printed at : ?????????????}
 
 \vfill
-\centerline{\Large\bfseries kananxDa matutx saMsakxqqti ilAKeya dhanasahAyadoMdige}\relax
-\vfill
+
+\noindent
+{\bf AthiRka neravu : kananxDa matutx saMsakxqqti ilAKe}
+
+\bigskip
 
 \noindent
 {\bf\large shivapada ratanxkoVsha}\\[5pt]
