--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -6,7 +6,11 @@
 
 \bigskip
 
-jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka BinanxtegaLu hAgu sAmayx veYshiSaTxtegaLU ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. ``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka matapaMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka sAmayx veYshiSaTxtegaLu hAgu BinanxtegaLu ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. 
+
+\medskip
+
+``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka matapaMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
 
 \medskip
 
@@ -18,15 +22,11 @@ pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVras
 
 \medskip
 
-hiriya vidAvxMsarugaLAda porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, DA. esf. vidAyxshaMkarf, shirxV enf. basavArAdhayx, shirxV esf. \hbox{naMjuMDayayx}, shirxV Arf.esf. pUNARnaMda, DA. naMdiVshf haMce\,ravarugaLu saMpAdaka maMDaLiyalilx aviratavAgi sharxmisi I niGaMTanunx rUpisidAdxre. avarelalxra sharxma ililx sAthaRkagoMDide.
-
+saMpAdaka maMDaLiyu aviratavAgi sharxmisi I niGaMTanunx rUpiside. saMpAdaka maMDaLiya sharxma ililx sAthaRkagoMDide. DA. naMdiVshf haMce saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx sharxdedhxyiMda mADidAdxre. 
 \medskip
 
-DA. naMdiVshf haMce I garxMthada saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe,\break padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx pirxVti, sharxdedhxgaLiMda mADidAdxre. 
-\medskip
-
-I yoVjanege sahAyadhana niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx AshisutetxVve. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
+I yoVjanege AthiRka neravu niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx AshisutetxVve. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
 
 \vskip 1cm
 
-\hfill {\large\bf sAvxmigaLu}
+\hfill {\large\bf jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLu}
