work in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -77,13 +77,12 @@ mudarxkaru : ????????
 {\fontsize{14pt}{16pt}\selectfont
 porx. ji.esf. sidadhxliMgayayx\\[8pt]
 DA. Ti.vi. veMkaTAcala shAsitxrXV\\[8pt]
-DA. esf. vidAyxshaMkara\\[8pt]
 DA. enf.esf. tArAnAtha\\[8pt]
 shirxV ecf.vi. nAgarAjarAvf\\[8pt]
 DA. si. shivakumArasAvxmi\\[8pt]
-shirxV esf. naMjuMDayayx\\[8pt]
-shirxV Arf.esf. pUNARnaMda\\[8pt]
-DA. naMdiVshf haMce (kAyaRnivARhaka saMpAdaka)}\relax
+shirxV Arf.esf. pUNARnaMda\\[15pt]
+{\bf kAyaRnivARhaka saMpAdaka}\\[8pt]
+DA. naMdiVshf haMce }\relax
 \end{center}
 
 \vfill
