--- a/nivedane.tex
+++ b/nivedane.tex
@@ -7,7 +7,7 @@
 \centerline{\large\bfseries 1}
 \medskip
 
-jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDu rAshiyAgirutatxde. pArxdeVshikate, dhamaR, jAti-mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxti BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu huTiTxkoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
+jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDu rAshiyAgirutatxde. pArxdeVshikate, dhamaR, jAti-mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxti BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
 
 \medskip
 
@@ -35,15 +35,15 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx omemx DA. enf.ji. mahAdeVvapapxnavaru matotxmemx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx eM. shivakumArasAvxmi, si. shivakumArasAvxmi hAgU parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxLf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf. mahadeVvayayx, vidAvxmf gurumananxdeVvaru, shirxVmati gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx omemx DA. enf.ji. mahAdeVvapapxnavaru matotxmemx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shivakumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf. mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
-I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx EpaRTiTxtutx. garxMthavanunx loVkApaRNe mADalu aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx esf.eM. vaqSaBeVMdarx\-sAvxmi, ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige dhanigUDisidaru. saciva shirxV goVviMda kArajoVLa avaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
+I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx esf.eM. vaqSaBeVMdarx\-sAvxmi, ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige dhanigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
 
 \medskip
 
-I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa viVrasheYva shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx enf. \hbox{basavArAdhayx}, Ti.vi. veMkaTAcala shAsitxrXV, ji.esf. sidadhxliMgayayx, go.ru. cananxbasapapx, esf. vidAyxshaMkara, enf.esf. tArAnAtha, Ti.Arf. mahadeVvayayx, Arf. shivaNaNx, enf.ji. mahadeVvapapx, ecf.vi. nAgarAjarAvf, si. shivakumArasAvxmi, Arf.esf. pUNARnaMda BAgavahisidadxru.
+I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa viVrasheYva shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, esf. naMjuMDayayx, enf. \hbox{basavArAdhayx}, Ti.vi. veMkaTAcala shAsitxrXV, ji.esf. sidadhxliMgayayx, go.ru. cananxbasapapx, esf. vidAyxshaMkara, enf.esf. tArAnAtha, Ti.Arf. mahadeVvayayx, Arf. shivaNaNx, enf.ji. mahadeVvapapx, ecf.vi. nAgarAjarAvf, si. shivakumArasAvxmi, Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
 
 \medskip
 
@@ -55,11 +55,11 @@ kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx
 
 \medskip
 
-niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda padasaMgarxhada kelasa naDeyitu. basava \hbox{samitiya} viVrasheYva pAriBASika padakoVshadalilx vacanagaLu hAgU kananxDa viVrasheYva kAvayxgaLiMda ulelxVKagaLu matutx parxyoVga\-gaLanunx avara gamanakekx taMdu baLasikoLaLxlAyitu. Adare kaqtiya samagarxteya daqSiTxyiMda ininxtara garxMthagaLanunx saha parishiVlisuvudu agatayxveMdu vidAvxMsaru tiVmARnisidaru. hariharaniMda modalugoMDu SaDakaSxriyavarege sumAru 250kUkx hecucx viVrasheYva kavigaLa paTiTxyanunx sidadhxpaDisalAyitu. 
+niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda padasaMgarxhada kelasa naDeyitu. basava \hbox{samitiya} viVrasheYva pAriBASika padakoVshadalilx vacanagaLu hAgU kananxDa viVrasheYva kAvayxgaLiMda ulelxVKagaLu matutx parxyoVga\-gaLanunx avara opipxge paDedu baLasikoLaLxlAyitu. Adare kaqtiya samagarxteya daqSiTxyiMda ininxtara garxMthagaLanunx saha parishiVlisuvudu agatayxveMdu vidAvxMsaru tiVmARnisidaru. hariharaniMda modalugoMDu SaDakaSxriyavarege sumAru 250kUkx hecucx viVrasheYva kavigaLa paTiTxyanunx sidadhxpaDisalAyitu. 
 
 \medskip
 
-I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasavAgitutx. elalx kavigaLa kaqtigaLu oMdeV kaDe laBayxvAgutitxralilalx. A kAraNadiMda meYsUru vishavxvidAyxnilayavU seVridaMte rAjayxda aneVka kaDegaLalilx aneVka tiMgaLugaLa kAla I garxMthagaLanunx huDuki, saMgarxhisi agatayxbidadx kaDegaLalilx avugaLa nakalugaLanunx tayArisi oMdoMdu parxtiyanunx vidAvxMsarige niVDa\-lAyitu. I padagaLanunx saMgarxhisalu padapaTiTxke namUneyanunx tayArisalAgitutx. adaralilx kAvayxda hesaru, kaviya hesaru, parxkaTavAda vaSaR, pAriBASika pada, adara parxyoVga, puTa saMKeyx, saMdhi/adhAyxya, pada saMKeyx hiVge elalx vivaragaLanUnx alilx namUdisabeVkAgitutx.
+I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasavAgitutx. elalx kavigaLa kaqtigaLu oMdeV kaDe laBayxvAgutitxralilalx. A kAraNadiMda meYsUru vishavxvidAyxnilayavU seVridaMte rAjayxda aneVka kaDegaLalilx aneVka tiMgaLugaLa kAla I garxMthagaLanunx huDuki, saMgarxhisi agatayxbidadx kaDegaLalilx avugaLa nakalugaLanunx tayArisi oMdoMdu parxtiyanunx vidAvxMsarige niVDa\-lAyitu. I padagaLanunx saMgarxhisalu padapaTiTxke namUneyanunx tayArisalAgitutx. adaralilx kAvayxda hesaru, kaviya hesaru, parxkaTavAda vaSaR, pAriBASika pada, adara parxyoVga, puTa saMKeyx, saMdhi/adhAyxya, pada saMKeyx hiVge elalx vivaragaLanUnx alilx namUdisabeVkeMdu sUcisalAyitu.
 
 \medskip
 
@@ -71,7 +71,7 @@ padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxgoMDa pad
 
 \newpage
 
-I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru niVDida matotxMdu sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina bi. rAjasheVKarayayxnavarige niSapxtitx racisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
+I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina bi. rAjasheVKarayayxnavarige niSapxtitx racisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
 
 \medskip
 
@@ -83,7 +83,7 @@ idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu parxyoVga BAga
 
 \medskip
 
-I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajARlavanunx O.elf. nAgaBUSaNa\-sAvxmi, vasudheVMdarx, ke. deVvarAju, ecf. pavitarx. ecf.elf. OMshivaparxkAshf ivarugaLu sidadhxmADidadx \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya ji. gULapapxsAvxmi, malalxsheTiTx, Arf.esf. kumArf, pi.esf. maMjunAtha, pi. parxBusAvxmi, pi.esf. sudiVpf, enf.emf. kaqSaNxpapx, ecf.emf. nAgaBUSaNa, emf.esf. naTarAjf, pi. gurupAdasAvxmi, ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU emf.esf. maMjunAthf, sidadhxrAju, ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. jotege saMsakxqqtada BAgagaLanunx ecf.vi. nAgarAjarAvfravaru tididxkoTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
+I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajARlavanunx O.elf. nAgaBUSaNa\-sAvxmi, vasudheVMdarx, ke. deVvarAju, ecf. pavitarx. ecf.elf. OMshivaparxkAshf ivarugaLu sidadhxmADidadx \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya ji. gULapapxsAvxmi, Arf.esf. honanxsheTiTx, pi.esf. kumArf,  maMjunAtha, pi. parxBusAvxmi, pi.esf. sudiVpf, enf.emf. kaqSaNxpapx, ecf.emf. nAgaBUSaNa, emf.esf. naTarAjf, pi. gurupAdasAvxmi, ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU emf.esf. maMjunAthf, sidadhxrAju, ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. jotege saMsakxqqtada BAgagaLanunx ecf.vi. nAgarAjarAvfravaru tididxkoTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
 
 \medskip
 
@@ -259,7 +259,7 @@ I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmay
 
 \medskip
 
-I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda enf. basavArAdhayx hAgU esf. vidAyxshaMkara, esf. naMjuMDayayxnavarugaLanunx manaHpUvaRkavAgi neneyutetxVve.
+I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, enf. basavArAdhayx, esf. vidAyxshaMkara hAgU esf. naMjuMDayayxnavarugaLanunx manaHpUvaRkavAgi neneyutetxVve.
 
 \medskip
 
